@@ -64,6 +64,7 @@ Misc:
  - mGUI: Remember name and position of last loaded game
  - Core: Create game-related paths if they don't exist (fixes mgba.io/i/1446)
  - Qt: Add option to pause on minimizing window (closes mgba.io/i/1379)
+ - Switch: Support file associations
 
 0.7.2: (2019-05-25)
 Emulation fixes:
